# rtracer

./: CMakeLists.txt  README.md  rtracer.cpp
geometry/: geometry.h  intersection.h  ray.h  sphere.h  triangle.h  vector.h
tools/: camera_options.h  image.h  light.h  material.h  object.h  scene.h
